tests/NormalTests/paczka2/big_fuzzy/14542683.err
Error in line 12: PPEZ3MJdNr A607 -6,7
Error in line 10: mvIHPGp4iCF S467 94,1
Error in line 6: PPEZ3MJdNr A607 88,1
Error in line 13: mvIHPGp4iCF S666 59,1
Error in line 25: S666 A607 32,2
Error in line 27: S666 S70 28,4
Error in line 51: dqRqi S70 46,9
Error in line 56: dqRqi A607 812,7
Error in line 52: 4Pst6IS5 S467 2,6
Error in line 59: PPEZ3MJdNr S467 15,9
Error in line 68: 8YAVZBO S70 72,7
Error in line 79: mvIHPGp4iCF S70 1,8
Error in line 64: 4Pst6IS5 S70 2,7
Error in line 76: S666 A607 66,2
Error in line 82: 4Pst6IS5 S666 80,8
Error in line 81: mvIHPGp4iCF S666 70,9
Error in line 91: mvIHPGp4iCF S70 32,4
Error in line 93: 4Pst6IS5 S70 13,49
Error in line 90: 4Pst6IS5 S70 4,3
Error in line 104: 8YAVZBO S666 84,8
Error in line 96: 4Pst6IS5 S467 75,2
Error in line 117: mvIHPGp4iCF S467 46,3
Error in line 116: 4Pst6IS5 S70 93,6
Error in line 119: mvIHPGp4iCF S666 18,0
Error in line 125: PPEZ3MJdNr A607 10,3
Error in line 132: 8YAVZBO A607 84,3
Error in line 120: dqRqi S467 31,2
Error in line 138: dqRqi S666 92,3
Error in line 140: dqRqi A607 44,6
Error in line 139: mvIHPGp4iCF S70 83,2
Error in line 142: mvIHPGp4iCF S666 12,5
Error in line 150: mvIHPGp4iCF A607 2,7
Error in line 165: 7krNL4LimMf A607 25,2
Error in line 173: mvIHPGp4iCF A607 87,4
Error in line 170: dqRqi S467 92,9
Error in line 178: dqRqi S70 75,0
Error in line 177: mvIHPGp4iCF S70 46,6
Error in line 191: dqRqi S70 8,4
Error in line 219: PPEZ3MJdNr S666 55,1
Error in line 228: PPEZ3MJdNr S666 397,1
Error in line 220: 4Pst6IS5 S666 63,4
Error in line 233: mvIHPGp4iCF A607 47,6
Error in line 229: PPEZ3MJdNr S70 61,5
Error in line 232: dqRqi S666 21,0
